tests/compile-fail/tracked_struct_field_not_salsa_value.rs
use std::marker::PhantomData;

#[derive(Clone, Debug, Hash, PartialEq, Eq)]
struct NotSalsaValue<'db>(PhantomData<fn() -> &'db ()>);

#[salsa::tracked]
struct MyTracked<'db> {
    field: NotSalsaValue<'db>,
}

fn main() {}
