tests/compile-fail/tracked_struct_field_not_salsa_value.stderr
error[E0277]: the field type `NotSalsaValue<'db>` does not implement `SalsaValue`
 --> tests/compile-fail/tracked_struct_field_not_salsa_value.rs:8:12
  |
8 |     field: NotSalsaValue<'db>,
  |            ^^^^^^^^^^^^^^^^^^ does not implement `SalsaValue`
  |
help: the trait `salsa::salsa_value::helper::SalsaValueField<'_, NotSalsaValue<'static>>` is not implemented for `NotSalsaValue<'db>`
 --> tests/compile-fail/tracked_struct_field_not_salsa_value.rs:4:1
  |
4 | struct NotSalsaValue<'db>(PhantomData<fn() -> &'db ()>);
  | ^^^^^^^^^^^^^^^^^^^^^^^^^
  = note: derive `salsa::SalsaValue` for local field types; for foreign types, use `#[salsa_value(prove_safe_to_retain_manually)]` only after verifying retention is safe
note: required by a bound in `salsa::plumbing::assert_salsa_value`
 --> src/salsa_value.rs
  |
  |     pub const fn assert_salsa_value<'db, Static, Output>(_: PhantomData<&'db ()>)
  |                  ------------------ required by a bound in this function
  |     where
  |         Output: SalsaValueField<'db, Static>,
  |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_salsa_value`
